--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@tailwindcss/typography": "^0.4.1",
     "next": "12.0.3",
     "next-themes": "0.0.15",
+    "npm": "^8.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -18,6 +20,8 @@
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
+    "gray-matter": "^4.0.3",
+    "next-mdx-remote": "^3.0.8",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19"
   }
